plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// --- 데이터 및 JPA ---
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// --- 웹 (리액티브 스택) ---
	implementation 'org.springframework.boot:spring-boot-starter-web' // 서블릿 기반 웹 스택
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // 리액티브 웹 스택

	// --- 보안 ---
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// --- 유효성 검사 ---
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// --- 유틸리티 및 Lombok ---
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.json:json:20231013'
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'

	// --- JWT ---
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// --- Swagger (springdoc) ---
	//implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// --- 테스트 ---
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'

	// M1/M2 Mac용 (오류 로그 방지)
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.101.Final:osx-aarch_64'
}

tasks.named('test') {
	useJUnitPlatform()
}